force-app/main/default/objects/MD_Case__c/MD_Case__c.object-meta.xml
<CustomObject>
    <label>Service Request</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Service Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>