force-app/main/default/objects/MD_Case__c/fields/Account_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_Formula__c</fullName>
    <formula>AccountId__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>