force-app/main/default/objects/MD_Case__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name (Where Machine Installed)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>