force-app/main/default/objects/MD_Case__c/fields/After_Installing_Backup_Procedure__c.field-meta.xml
<CustomField>
    <fullName>After_Installing_Backup_Procedure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Installing Backup Procedure</label>
    <type>Checkbox</type>
</CustomField>