force-app/main/default/objects/MD_Case__c/fields/Air_Conditioning_room_temperature__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioning_room_temperature__c</fullName>
    <label>Air Conditioning room temperature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>