force-app/main/default/objects/MD_Case__c/fields/Arrive_at_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Arrive_at_Warehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arrive at Warehouse</label>
    <type>Checkbox</type>
</CustomField>