force-app/main/default/objects/MD_Case__c/fields/AssetId__c.field-meta.xml
<CustomField>
    <fullName>AssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diagnostic Machine</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MD_Asset__c.AccountId__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MD_Asset__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>