force-app/main/default/objects/MD_Case__c/fields/Assign_Error_Codes__c.field-meta.xml
<CustomField>
    <fullName>Assign_Error_Codes__c</fullName>
    <label>Assign Error Codes</label>
    <length>25</length>
    <type>Text</type>
</CustomField>