force-app/main/default/objects/MD_Case__c/fields/Before_Installation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Before_Installation_Comments__c</fullName>
    <label>Before Installation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>