force-app/main/default/objects/MD_Case__c/fields/Calibration_Performed__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Performed__c</fullName>
    <label>Calibration Performed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>