force-app/main/default/objects/MD_Case__c/fields/Capture_Resolution_Reason__c.field-meta.xml
<CustomField>
    <fullName>Capture_Resolution_Reason__c</fullName>
    <label>Resolution Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Call Resolution</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>