force-app/main/default/objects/MD_Case__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>MD_Case__c</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>