force-app/main/default/objects/MD_Case__c/fields/Case_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_Days__c</fullName>
    <formula>IF(
    ISBLANK(Close_Date__c),
    TODAY() - DATEVALUE(CreatedDate),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>