force-app/main/default/objects/MD_Case__c/fields/Case_Source__c.field-meta.xml
<CustomField>
    <fullName>Case_Source__c</fullName>
    <label>Case Source</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>