force-app/main/default/objects/MD_Case__c/fields/City1__c.field-meta.xml
<CustomField>
    <fullName>City1__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>city</valueSetName>
    </valueSet>
</CustomField>