force-app/main/default/objects/MD_Case__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <referenceTo>City_And_Region__c</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>