force-app/main/default/objects/MD_Case__c/fields/Client_Site_Ready_for_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Client_Site_Ready_for_Deployment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Site Ready for Deployment</label>
    <type>Checkbox</type>
</CustomField>