force-app/main/default/objects/MD_Case__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Internal Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>