force-app/main/default/objects/MD_Case__c/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Issues</fullName>
            </value>
            <value>
                <fullName>Service Quality</fullName>
            </value>
            <value>
                <fullName>Delivery Issues</fullName>
            </value>
            <value>
                <fullName>Machine Malfunction</fullName>
            </value>
            <value>
                <fullName>Installation &amp; Training</fullName>
            </value>
            <value>
                <fullName>Pricing or Billing Issues</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Consumables Not Available</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
                <isActive>false</isActive>
                <label>Feature Request</label>
            </value>
            <value>
                <fullName>Problem</fullName>
                <isActive>false</isActive>
                <label>Problem</label>
            </value>
            <value>
                <fullName>Question</fullName>
                <isActive>false</isActive>
                <label>Question</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>