force-app/main/default/objects/MD_Case__c/fields/Complete_Machine_Repair_Process__c.field-meta.xml
<CustomField>
    <fullName>Complete_Machine_Repair_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Machine Repair Process</label>
    <type>Checkbox</type>
</CustomField>