force-app/main/default/objects/MD_Case__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>