force-app/main/default/objects/MD_Case__c/fields/Customer_Feedback_Survey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback_Survey__c</fullName>
    <label>Customer Feedback Survey</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>