force-app/main/default/objects/MD_Case__c/fields/Customer_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfied__c</fullName>
    <label>Customer Satisfied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>