force-app/main/default/objects/MD_Case__c/fields/Customer_Signature__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signature__c</fullName>
    <label>Customer Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>