force-app/main/default/objects/MD_Case__c/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo</label>
    <type>Checkbox</type>
</CustomField>