force-app/main/default/objects/MD_Case__c/fields/During_Installation_Comments__c.field-meta.xml
<CustomField>
    <fullName>During_Installation_Comments__c</fullName>
    <label>During Installation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>