force-app/main/default/objects/MD_Case__c/fields/Electrical_Supply__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Supply__c</fullName>
    <label>Electrical Supply</label>
    <length>255</length>
    <type>Text</type>
</CustomField>