force-app/main/default/objects/MD_Case__c/fields/Error_Observed__c.field-meta.xml
<CustomField>
    <fullName>Error_Observed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error Observed</label>
    <type>Checkbox</type>
</CustomField>