force-app/main/default/objects/MD_Case__c/fields/FCR_Attached__c.field-meta.xml
<CustomField>
    <fullName>FCR_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FCR Attached</label>
    <type>Checkbox</type>
</CustomField>