force-app/main/default/objects/MD_Case__c/fields/Field_Service_Signature__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Signature__c</fullName>
    <label>Field Service Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>