force-app/main/default/objects/MD_Case__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <label>Grand Total</label>
    <summarizedField>Account_Particulars__c.Total_Rs__c</summarizedField>
    <summaryForeignKey>Account_Particulars__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>