force-app/main/default/objects/MD_Case__c/fields/Grounding_of_power_Supply__c.field-meta.xml
<CustomField>
    <fullName>Grounding_of_power_Supply__c</fullName>
    <label>Grounding of power Supply</label>
    <length>255</length>
    <type>Text</type>
</CustomField>