force-app/main/default/objects/MD_Case__c/fields/If_parts_replaced__c.field-meta.xml
<CustomField>
    <fullName>If_parts_replaced__c</fullName>
    <label>If Parts Replaced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>