force-app/main/default/objects/MD_Case__c/fields/Input_Resolution_Reason__c.field-meta.xml
<CustomField>
    <fullName>Input_Resolution_Reason__c</fullName>
    <label>Resolution Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>