force-app/main/default/objects/MD_Case__c/fields/Instrument_Name__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Name__c</fullName>
    <formula>Machine_Installation__r.Diagnostic_Machine__r.Product__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instrument Name</label>
    <type>Text</type>
</CustomField>