force-app/main/default/objects/MD_Case__c/fields/IsClosedOnCreate__c.field-meta.xml
<CustomField>
    <fullName>IsClosedOnCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed When Created</label>
    <type>Checkbox</type>
</CustomField>