force-app/main/default/objects/MD_Case__c/fields/IsNewEscalation__c.field-meta.xml
<CustomField>
    <fullName>IsNewEscalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Escalation</label>
    <type>Checkbox</type>
</CustomField>