force-app/main/default/objects/MD_Case__c/fields/IsStopped__c.field-meta.xml
<CustomField>
    <fullName>IsStopped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stopped</label>
    <type>Checkbox</type>
</CustomField>