force-app/main/default/objects/MD_Case__c/fields/IsWaitingEscalation__c.field-meta.xml
<CustomField>
    <fullName>IsWaitingEscalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated: Waiting Too Long</label>
    <type>Checkbox</type>
</CustomField>