force-app/main/default/objects/MD_Case__c/fields/IsWorkingEscalation__c.field-meta.xml
<CustomField>
    <fullName>IsWorkingEscalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated: In Progress Too Long</label>
    <type>Checkbox</type>
</CustomField>