force-app/main/default/objects/MD_Case__c/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>