force-app/main/default/objects/MD_Case__c/fields/logo__c.field-meta.xml
<CustomField>
    <fullName>logo__c</fullName>
    <formula>IF(OR(
IsNewEscalation__c = TRUE,
 IsWorkingEscalation__c = True,
 IsQueueEscalation__c = True,
 IsWaitingEscalation__c = True), 
   IMAGE(&quot;/resource/Warning_Sign_Escalation&quot;, &quot;Warning - Escalation&quot;, 40, 40), 
   &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Escalated?</label>
    <type>Text</type>
</CustomField>