force-app/main/default/objects/MD_Case__c/fields/Machine_Condition_Repairable__c.field-meta.xml
<CustomField>
    <fullName>Machine_Condition_Repairable__c</fullName>
    <label>Machine Condition Repairable?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>