force-app/main/default/objects/MD_Case__c/fields/Machine_Installation__c.field-meta.xml
<CustomField>
    <fullName>Machine_Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Machine Installation</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <filterItems>
            <field>Machine_Installation__c.bill_to_account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId__c</valueField>
        </filterItems>
        <filterItems>
            <field>Machine_Installation__c.Ship_To_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId__c</valueField>
        </filterItems>
        <filterItems>
            <field>Machine_Installation__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Machine_Installation__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>