force-app/main/default/objects/MD_Case__c/fields/Machine_Installation_date__c.field-meta.xml
<CustomField>
    <fullName>Machine_Installation_date__c</fullName>
    <label>Machine Installation date</label>
    <type>Date</type>
</CustomField>