force-app/main/default/objects/MD_Case__c/fields/Machine_Installation_Id__c.field-meta.xml
<CustomField>
    <fullName>Machine_Installation_Id__c</fullName>
    <formula>Machine_Installation__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Machine Installation Id</label>
    <type>Text</type>
</CustomField>