force-app/main/default/objects/MD_Case__c/fields/Machine_Installation_Time__c.field-meta.xml
<CustomField>
    <fullName>Machine_Installation_Time__c</fullName>
    <label>Machine Installation Time</label>
    <type>DateTime</type>
</CustomField>