force-app/main/default/objects/MD_Case__c/fields/Machine_Installed__c.field-meta.xml
<CustomField>
    <fullName>Machine_Installed__c</fullName>
    <label>Machine Installed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>