force-app/main/default/objects/MD_Case__c/fields/Maintenance_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Procedures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maintenance Procedures</label>
    <type>Checkbox</type>
</CustomField>