force-app/main/default/objects/MD_Case__c/fields/Material_No__c.field-meta.xml
<CustomField>
    <fullName>Material_No__c</fullName>
    <formula>Machine_Installation__r.Material_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material No</label>
    <type>Text</type>
</CustomField>