force-app/main/default/objects/MD_Case__c/fields/Material_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Material_Serial_No__c</fullName>
    <formula>Machine_Installation__r.Serial_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Serial No</label>
    <type>Text</type>
</CustomField>