force-app/main/default/objects/MD_Case__c/fields/Nature_of_Problem_s__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Problem_s__c</fullName>
    <label>Nature of Problem(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>