force-app/main/default/objects/MD_Case__c/fields/New_Installation__c.field-meta.xml
<CustomField>
    <fullName>New_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Installation</label>
    <type>Checkbox</type>
</CustomField>