force-app/main/default/objects/MD_Case__c/fields/Not_Working__c.field-meta.xml
<CustomField>
    <fullName>Not_Working__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Working</label>
    <type>Checkbox</type>
</CustomField>