force-app/main/default/objects/MD_Case__c/fields/Not_Working_Comments__c.field-meta.xml
<CustomField>
    <fullName>Not_Working_Comments__c</fullName>
    <label>Not Working Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>