force-app/main/default/objects/MD_Case__c/fields/Old_Material_No__c.field-meta.xml
<CustomField>
    <fullName>Old_Material_No__c</fullName>
    <formula>Machine_Installation__r.Diagnostic_Machine__r.Product__r.Old_Material_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Material No</label>
    <type>Text</type>
</CustomField>