force-app/main/default/objects/MD_Case__c/fields/On_Spot__c.field-meta.xml
<CustomField>
    <fullName>On_Spot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Spot</label>
    <type>Checkbox</type>
</CustomField>