force-app/main/default/objects/MD_Case__c/fields/Operation_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Operation_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operation &amp; Workflow</label>
    <type>Checkbox</type>
</CustomField>