force-app/main/default/objects/MD_Case__c/fields/Operators_Trained__c.field-meta.xml
<CustomField>
    <fullName>Operators_Trained__c</fullName>
    <label>Operators Trained</label>
    <length>255</length>
    <type>Text</type>
</CustomField>