force-app/main/default/objects/MD_Case__c/fields/Owner_Assigned_date_updated__c.field-meta.xml
<CustomField>
    <fullName>Owner_Assigned_date_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Assigned date updated</label>
    <type>Checkbox</type>
</CustomField>