force-app/main/default/objects/MD_Case__c/fields/Part_s_Replaced__c.field-meta.xml
<CustomField>
    <fullName>Part_s_Replaced__c</fullName>
    <label>Part(s) Replaced:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>