force-app/main/default/objects/MD_Case__c/fields/Power_On_Self_Test__c.field-meta.xml
<CustomField>
    <fullName>Power_On_Self_Test__c</fullName>
    <label>Power-On Self-Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>