force-app/main/default/objects/MD_Case__c/fields/Product1__c.field-meta.xml
<CustomField>
    <fullName>Product1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>MD_Product2__c</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>