force-app/main/default/objects/MD_Case__c/fields/QC_Results_Within_Range__c.field-meta.xml
<CustomField>
    <fullName>QC_Results_Within_Range__c</fullName>
    <label>QC Results Within Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>