force-app/main/default/objects/MD_Case__c/fields/Ready_For_Use__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Use__c</fullName>
    <label>Ready For Use?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>