force-app/main/default/objects/MD_Case__c/fields/Region_From_City__c.field-meta.xml
<CustomField>
    <fullName>Region_From_City__c</fullName>
    <formula>TEXT(City__r.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region From City</label>
    <type>Text</type>
</CustomField>