force-app/main/default/objects/MD_Case__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remarks:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>