force-app/main/default/objects/MD_Case__c/fields/Resolution_Description__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Description__c</fullName>
    <label>Case Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>