force-app/main/default/objects/MD_Case__c/fields/Returned_Machine__c.field-meta.xml
<CustomField>
    <fullName>Returned_Machine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Returned Machine</label>
    <type>Checkbox</type>
</CustomField>