force-app/main/default/objects/MD_Case__c/fields/Safety_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Safety_Guidelines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety Guidelines</label>
    <type>Checkbox</type>
</CustomField>