force-app/main/default/objects/MD_Case__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales</label>
    <type>Checkbox</type>
</CustomField>