force-app/main/default/objects/MD_Case__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <formula>Machine_Installation__r.Diagnostic_Machine__r.Serial_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>