force-app/main/default/objects/MD_Case__c/fields/Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>Service_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>