force-app/main/default/objects/MD_Case__c/fields/Service_Person__c.field-meta.xml
<CustomField>
    <fullName>Service_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>