force-app/main/default/objects/MD_Case__c/fields/Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account__c</fullName>
    <formula>Machine_Installation__r.Ship_To_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Account</label>
    <type>Text</type>
</CustomField>