force-app/main/default/objects/MD_Case__c/fields/SlaStartDate__c.field-meta.xml
<CustomField>
    <fullName>SlaStartDate__c</fullName>
    <label>Entitlement Process Start Time</label>
    <type>DateTime</type>
</CustomField>